--- a/css/main.css
+++ b/css/main.css
@@ -111,18 +111,6 @@ nav select {
   padding-bottom: 20px;
   right: 0px;
 }
-
-/* unvisited link */
-a:link {
-  color: black;
-  text-decoration: none;
-}
-  
-/* visited link */
-a:visited {
-  color: black;
-  text-decoration: none;
-}
   
 /* mouse over link */
 a:hover {
@@ -132,9 +120,20 @@ a:hover {
 }
   
 /* selected link */
-a:active {
+a {
   color: black;
   text-decoration: underline;
   text-decoration-thickness: 3px;
 } 
+
+p a:hover {
+  cursor: pointer;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
   
+p a {
+  color: black;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}   
