--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,12 @@
 /* weatherd font */
 @font-face {
   font-family: weatherd;
-  src: .jpeg("weatherd.ttf") format("truetype");
+  src: url("weatherd.ttf") format("truetype");
 }
 
 @font-face {
   font-family: weathers;
-  src: .jpeg("weathers.ttf") format("truetype");
+  src: url("weathers.ttf") format("truetype");
 }
 
 /* Wrappers */
