--- a/css/gallery1.css
+++ b/css/gallery1.css
@@ -74,3 +74,8 @@
     "img67";
     cursor: pointer;
 }
+.gallery1 {display: block; visibility: visible; }
+.gallery2 {display: none;  visibility: hidden; }
+.gallery3 {display: none;  visibility: hidden; }
+.gallery4 {display: none;  visibility: hidden; }
+.gallery7 {display: none;  visibility: hidden; }
