--- a/css/gallery2.css
+++ b/css/gallery2.css
@@ -46,3 +46,8 @@
     "img66 img67";
     cursor: pointer;
 }
+.gallery1 {display: block; visibility: visible; }
+.gallery2 {display: block; visibility: visible; }
+.gallery3 {display: none;  visibility: hidden; }
+.gallery4 {display: none;  visibility: hidden; }
+.gallery7 {display: none;  visibility: hidden; }
