--- a/css/gallery3.css
+++ b/css/gallery3.css
@@ -31,3 +31,8 @@
     "img65 img66 img67";
     cursor: pointer;
 }
+.gallery1 {display: block; visibility: visible; }
+.gallery2 {display: block; visibility: visible; }
+.gallery3 {display: block; visibility: visible; }
+.gallery4 {display: none;  visibility: hidden; }
+.gallery7 {display: none;  visibility: hidden; }
