--- a/css/gallery7.css
+++ b/css/gallery7.css
@@ -23,3 +23,8 @@
 	"img64 img64 img66 img66 img67 img67 img65";	/* 16 */
     cursor: pointer;
 }
+.gallery1 {display: block; visibility: visible; }
+.gallery2 {display: block; visibility: visible; }
+.gallery3 {display: block; visibility: visible; }
+.gallery4 {display: block; visibility: visible; }
+.gallery7 {display: block; visibility: visible; }
