--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,4 +1,4 @@
-#index-gallery .gallery-img {
+#index-gallery .gallery1 .gallery-img {
     width: 100%;
     height: 300px;
     background-repeat: no-repeat;
