--- a/css/gallery4.css
+++ b/css/gallery4.css
@@ -5,27 +5,11 @@
     grid-template-rows: auto;
     grid-gap: 10px;
     grid-template-areas:
-    "img1  img2  img2  img3"
-    "img4  img5  img6  img7"
-    "img8  img8  img9  img10"
-    "img11 img11 img12 img14"
-    "img13 img13 img15 img15"
-    "img16 img17 img17 img18"
-    "img19 img20 img21 img21"
-    "img22 img22 img23 img23"
-    "img24 img25 img25 img26"
-	"img27 img28 img28 img29"
-    "img30 img31 img32 img33"
-	"img34 img34 img35 img36"
-    "img37 img38 img39 img40"
-	"img41 img41 img42 img42"
-    "img43 img44 img45 img46"
-    "img47 img48 img49 img50"
-    "img51 img51 img52 img52"
-	"img53 img54 img55 img55"
-    "img56 img57 img58 img59"
-    "img60 img61 img62 img63"
-    "img64 img65 img66 img67";
+    "img1  img2  img2  img3" 		/*  1 */
+    "img1  img5  img4  img4"		/*  2 */
+	"img7  img5  img6  img10"		/*  3 */
+	"img12 img13 img16 img10"		/*  4 */
+	"img12 img13 img17 img18";    	/*  5 */
     cursor: pointer;
 }
 .gallery1 {display: block; visibility: visible; }
