test.html für 1,2,3,4 und 7

--- a/css/gallery2.css
+++ b/css/gallery2.css
@@ -9,6 +9,7 @@
     "img1  img5"		/*  2 */
 	"img2  img2"		/*  3 */
 	"img4  img4"		/*  4 */
+	"img7  img7"		/*  4 */
 	"img11 img11";     	/*  5 */
     cursor: pointer;
 }
