--- a/css/gallery7.css
+++ b/css/gallery7.css
@@ -23,8 +23,8 @@
 	"img64 img64 img66 img66 img67 img67 img65";	/* 16 */
     cursor: pointer;
 }
-.gallery1 {display: block; visibility: visible; }
-.gallery2 {display: block; visibility: visible; }
-.gallery3 {display: block; visibility: visible; }
-.gallery4 {display: block; visibility: visible; }
+.gallery1 {display: none;  visibility: hidden; }
+.gallery2 {display: none;  visibility: hidden; }
+.gallery3 {display: none;  visibility: hidden; }
+.gallery4 {display: none;  visibility: hidden; }
 .gallery7 {display: block; visibility: visible; }
