--- a/css/gallery2.css
+++ b/css/gallery2.css
@@ -13,7 +13,7 @@
 	"img11 img11";     	/*  5 */
     cursor: pointer;
 }
-.gallery1 {display: block; visibility: visible; }
+.gallery1 {display: none;  visibility: hidden; }
 .gallery2 {display: block; visibility: visible; }
 .gallery3 {display: none;  visibility: hidden; }
 .gallery4 {display: none;  visibility: hidden; }
