--- a/css/gallery4.css
+++ b/css/gallery4.css
@@ -12,8 +12,8 @@
 	"img12 img13 img11 img17";    	/*  5 */
     cursor: pointer;
 }
-.gallery1 {display: block; visibility: visible; }
-.gallery2 {display: block; visibility: visible; }
-.gallery3 {display: block; visibility: visible; }
+.gallery1 {display: none;  visibility: hidden; }
+.gallery2 {display: none;  visibility: hidden; }
+.gallery3 {display: none;  visibility: hidden; }
 .gallery4 {display: block; visibility: visible; }
 .gallery7 {display: none;  visibility: hidden; }
