--- a/css/main.css
+++ b/css/main.css
@@ -91,29 +91,29 @@ nav select {
 }
 
 #footer-main {
-    margin: 20px 10vw;
+    margin: 0px 0px;
 }
 
 #footer-main .footer-links {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
-  position: absolute;
-  margin: 0 1vw;
   padding-bottom: 20px;
   left: 0px;
 }
 
 #footer-main .footer-socicon {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
-  position: absolute;
   padding-bottom: 20px;
   white-space: nowrap;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
   text-align: center;
 }
+
+#footer-main .footer-links a {
+  color: black;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+} 
 
 #footer-main .footer-socicon a {
   color: black;
@@ -124,9 +124,7 @@ nav select {
 #footer-main .footer-copyright {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
-  position: absolute;
   white-space: nowrap;
-  margin: 0 1vw;
   padding-bottom: 20px;
   right: 0px;
 }
