--- a/css/gallery4.css
+++ b/css/gallery4.css
@@ -12,8 +12,55 @@
 	"img12 img13 img11 img17";    	/*  5 */
     cursor: pointer;
 }
+
 .gallery1 {display: none;  visibility: hidden; }
 .gallery2 {display: none;  visibility: hidden; }
 .gallery3 {display: none;  visibility: hidden; }
 .gallery4 {display: block; visibility: visible; }
 .gallery7 {display: none;  visibility: hidden; }
+
+.media-container-row {
+  display: block;
+  flex-wrap: nowrap;
+}
+
+.select-container {
+  display: block;
+  right: 0px;
+  position: absolute;
+}
+
+#footer-main .footer-links {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding-bottom: 20px;
+  left: 20px;
+  position: absolute;
+}
+
+#footer-main .footer-socicon {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding-bottom: 20px;
+  right: 20px;
+  position: absolute;
+}
+
+#footer-main .footer-links a {
+  color: black;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+} 
+
+#footer-main .footer-socicon a {
+  color: black;
+  text-decoration: none;
+} 
+
+#footer-main .footer-copyright {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding-bottom: 20px;
+  white-space: nowrap;
+  text-align: center;
+}
