--- a/css/gallery1.css
+++ b/css/gallery1.css
@@ -41,20 +41,19 @@
 #footer-main .footer-links {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
+  padding-top: 4px;
   padding-bottom: 20px;
+  left: 20px;
   position: relative;
-  white-space: nowrap;
-  text-align: center;
 }
 
 #footer-main .footer-socicon {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
-  padding-top: 10px;
+  padding-top: 4px;
   padding-bottom: 20px;
+  right: 20px;
   position: relative;
-  white-space: nowrap;
-  text-align: center;
 }
 
 #footer-main .footer-links a {
@@ -71,8 +70,8 @@
 #footer-main .footer-copyright {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
+  padding-top: 4px;
   padding-bottom: 20px;
-  position: relative;
   white-space: nowrap;
   text-align: center;
 }
