--- a/css/gallery2.css
+++ b/css/gallery2.css
@@ -21,40 +21,32 @@
 .gallery7 {display: none;  visibility: hidden; }
 
 .media-container-row {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
-  align-items: start;
+  display: block;
+  flex-wrap: nowrap;
 }
 
 .select-container {
-  display: flex;
+  display: block;
   right: 0px;
   position: absolute;
-  text-align:center;
-  justify-content: center;
-  align-content: center;
 }
 
 #footer-main .footer-links {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
+  padding-top: 4px;
   padding-bottom: 20px;
-  position: relative;
-  white-space: nowrap;
-  text-align: center;
+  left: 20px;
+  position: absolute;
 }
 
 #footer-main .footer-socicon {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
-  padding-top: 44px;
+  padding-top: 4px;
   padding-bottom: 20px;
-  position: relative;
-  white-space: nowrap;
-  text-align: center;
+  right: 20px;
+  position: absolute;
 }
 
 #footer-main .footer-links a {
@@ -71,8 +63,8 @@
 #footer-main .footer-copyright {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 24px;
+  padding-top: 4px;
   padding-bottom: 20px;
-  position: relative;
   white-space: nowrap;
   text-align: center;
 }
