--- a/css/gallery3.css
+++ b/css/gallery3.css
@@ -29,3 +29,41 @@
   right: 0px;
   position: absolute;
 }
+
+#footer-main .footer-links {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding-top: 4px;
+  padding-bottom: 20px;
+  left: 20px;
+  position: absolute;
+}
+
+#footer-main .footer-socicon {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding-top: 4px;
+  padding-bottom: 20px;
+  right: 20px;
+  position: absolute;
+}
+
+#footer-main .footer-links a {
+  color: black;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+} 
+
+#footer-main .footer-socicon a {
+  color: black;
+  text-decoration: none;
+} 
+
+#footer-main .footer-copyright {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 24px;
+  padding-top: 4px;
+  padding-bottom: 20px;
+  white-space: nowrap;
+  text-align: center;
+}
